Bug 337435 - kmail vcard import pgp key
Summary: kmail vcard import pgp key
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.13.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-14 11:58 UTC by zezadas
Modified: 2014-07-15 07:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zezadas 2014-07-14 11:58:44 UTC
Kmail does not have an option to attach gpg key to the personal vcard. But it is possible to import and export a vcards with gpg on adress book.
The workaround method, you can go to kmail config path, and edit manually the vCard.
Kmail should have too an option to import a already existent  vCard to identity. Since I already has my vCard and I dont want to create a new one.


Reproducible: Always

Steps to Reproduce:
1.go to kmail
2.settings -> configure kmail
3.identities-> modify your identity
4.advanced->attach my vcard to message
Actual Results:  
it does not add personal gpg key to vcard
it does not an option to import already existent vcard
Comment 1 Laurent Montel 2014-07-15 07:23:04 UTC
Git commit c6c12511a57af9d29a9a2d8a19524b00b1141537 by Montel Laurent.
Committed on 15/07/2014 at 07:22.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 337435 - kmail vcard import pgp key

FIXED-IN: 4.14

M  +44   -9    kmail/identity/identityaddvcarddialog.cpp
M  +5    -1    kmail/identity/identityaddvcarddialog.h
M  +9    -0    kmail/identity/identitydialog.cpp
M  +4    -0    kmail/tests/CMakeLists.txt
A  +47   -0    kmail/tests/identityaddvcarddialogtest.cpp     [License: GPL (v2)]
C  +13   -28   kmail/tests/identityaddvcarddialogtest.h [from: kmail/identity/identityaddvcarddialog.h - 050% similarity]

http://commits.kde.org/kdepim/c6c12511a57af9d29a9a2d8a19524b00b1141537
Comment 2 Laurent Montel 2014-07-15 07:24:49 UTC
I added support to add url from local vcard.
So now you can add it.

"it does not add personal gpg key to vcard" I don't know how to do it.