Fix Bug 337435 - kmail vcard import pgp key

FIXED-IN: 4.14
BUG: 337435